# cookiecutter-py

./: README.rst  cookiecutter.json
{{cookiecutter.application_name}}/: .bumpversion.cfg  Makefile  README.rst  pyproject.toml
